force-app/main/default/objects/Application__c/fields/Address_of_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Purchaser__c</fullName>
    <label>Address of Purchaser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>