force-app/main/default/objects/Application__c/fields/Applicant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>