force-app/main/default/objects/Application__c/fields/Applicant_Information_Complete__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Information_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant Information Complete</label>
    <type>Checkbox</type>
</CustomField>