force-app/main/default/objects/Application__c/fields/Applicant_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>