force-app/main/default/objects/Application__c/fields/Applicant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>