force-app/main/default/objects/Application__c/fields/Applicant_Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Social_Security_Number__c</fullName>
    <label>Social Security Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>