force-app/main/default/objects/Application__c/fields/Applicant_Title__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>