force-app/main/default/objects/Application__c/fields/Billing_Do_You_Use_Purchase_Orders__c.field-meta.xml
<CustomField>
    <fullName>Billing_Do_You_Use_Purchase_Orders__c</fullName>
    <label>Do You Use Purchase Orders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>