force-app/main/default/objects/Application__c/fields/Billing_Example_of_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Billing_Example_of_Purchase_Order__c</fullName>
    <inlineHelpText>Provide example of purchase order number format</inlineHelpText>
    <label>Example of Purchase Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>