force-app/main/default/objects/Application__c/fields/Billing_Information_Completed__c.field-meta.xml
<CustomField>
    <fullName>Billing_Information_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Information Completed</label>
    <type>Checkbox</type>
</CustomField>