force-app/main/default/objects/Application__c/fields/Billing_Name_of_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Billing_Name_of_Purchaser__c</fullName>
    <label>Name of Purchaser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>