force-app/main/default/objects/Application__c/fields/Billing_Resale_Certificate_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_Resale_Certificate_State__c</fullName>
    <label>Resale Certificate State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>