force-app/main/default/objects/Application__c/fields/Billing_Type_of_Materials_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type_of_Materials_Purchased__c</fullName>
    <label>Type of Materials Purchased</label>
    <length>255</length>
    <type>Text</type>
</CustomField>