force-app/main/default/objects/Application__c/fields/Billing_Type_of_Tangible_Personal_Prop__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type_of_Tangible_Personal_Prop__c</fullName>
    <label>Type of Tangible Personal Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>