force-app/main/default/objects/Application__c/fields/Billing_Vendors_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Vendors_Name__c</fullName>
    <label>Vendors Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>