force-app/main/default/objects/Application__c/fields/Business_License_Verified__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business License Verified</label>
    <type>Checkbox</type>
</CustomField>