force-app/main/default/objects/Application__c/fields/Company_Are_you_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Company_Are_you_Taxable__c</fullName>
    <label>Are you Taxable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>