force-app/main/default/objects/Application__c/fields/Company_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Billing_Address__c</fullName>
    <label>Billing Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>