force-app/main/default/objects/Application__c/fields/Company_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Company_Billing_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>