force-app/main/default/objects/Application__c/fields/Company_Business_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Business_License_Number__c</fullName>
    <label>Business License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>