force-app/main/default/objects/Application__c/fields/Company_Business_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Business_Start_Date__c</fullName>
    <label>Business Start Date</label>
    <type>Date</type>
</CustomField>