force-app/main/default/objects/Application__c/fields/Company_Contractors_License__c.field-meta.xml
<CustomField>
    <fullName>Company_Contractors_License__c</fullName>
    <label>Contractors License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>