force-app/main/default/objects/Application__c/fields/Company_CorpLLC__c.field-meta.xml
<CustomField>
    <fullName>Company_CorpLLC__c</fullName>
    <label>Corp/LLC#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>