force-app/main/default/objects/Application__c/fields/Company_Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Delivery_Address__c</fullName>
    <label>Delivery Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>