force-app/main/default/objects/Application__c/fields/Company_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole_Proprietor</fullName>
                <label>Sole Proprietor</label>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>