force-app/main/default/objects/Application__c/fields/Company_Estimated_Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Company_Estimated_Annual_Sales__c</fullName>
    <label>Estimated Annual Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>