force-app/main/default/objects/Application__c/fields/Company_Full_Legal_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Full_Legal_Business_Name__c</fullName>
    <label>Full Legal Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>