force-app/main/default/objects/Application__c/fields/Company_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Mailing_Address__c</fullName>
    <label>Mailing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>