force-app/main/default/objects/Application__c/fields/Company_Name_of_Contractors_Lic_Hold__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_of_Contractors_Lic_Hold__c</fullName>
    <label>Name of Contractors License Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>