force-app/main/default/objects/Application__c/fields/Company_Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Owner_First_Name__c</fullName>
    <label>Owner First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>