force-app/main/default/objects/Application__c/fields/Company_Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Company_Owner_Title__c</fullName>
    <label>Owner Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>