force-app/main/default/objects/Application__c/fields/Company_Percentage_Owned__c.field-meta.xml
<CustomField>
    <fullName>Company_Percentage_Owned__c</fullName>
    <label>Percentage Owned</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>