force-app/main/default/objects/Application__c/fields/Company_State_of_IncorpOrg__c.field-meta.xml
<CustomField>
    <fullName>Company_State_of_IncorpOrg__c</fullName>
    <label>State of Incorporation/Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>