force-app/main/default/objects/Application__c/fields/Company_TAX_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_TAX_ID_Number__c</fullName>
    <label>TAX ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>