force-app/main/default/objects/Application__c/fields/Company_Type_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Company_Type_of_Business__c</fullName>
    <label>Type of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>