force-app/main/default/objects/Application__c/fields/Company_Type_of_Trade__c.field-meta.xml
<CustomField>
    <fullName>Company_Type_of_Trade__c</fullName>
    <label>Type of Trade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>