force-app/main/default/objects/Application__c/fields/Contact_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_2__c</fullName>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>