force-app/main/default/objects/Application__c/fields/Contractor_License_Verified__c.field-meta.xml
<CustomField>
    <fullName>Contractor_License_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor License Verified</label>
    <type>Checkbox</type>
</CustomField>