force-app/main/default/objects/Application__c/fields/Demo_Reset__c.field-meta.xml
<CustomField>
    <fullName>Demo_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Reset</label>
    <type>Checkbox</type>
</CustomField>