force-app/main/default/objects/Application__c/fields/Legal__c.field-meta.xml
<CustomField>
    <fullName>Legal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>