force-app/main/default/objects/Application__c/fields/Licensing_Information_Compelted__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Information_Compelted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licensing Information Compelted</label>
    <type>Checkbox</type>
</CustomField>