force-app/main/default/objects/Application__c/fields/Operations__c.field-meta.xml
<CustomField>
    <fullName>Operations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>