force-app/main/default/objects/Application__c/fields/Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Phone_1__c</fullName>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>