force-app/main/default/objects/Application__c/fields/PostalZip_Code__c.field-meta.xml
<CustomField>
    <fullName>PostalZip_Code__c</fullName>
    <label>Postal/Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>