force-app/main/default/objects/Application__c/fields/Print_Name_of_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Print_Name_of_Signatory__c</fullName>
    <label>Print Name of Signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>