force-app/main/default/objects/Application__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lien</fullName>
                <default>true</default>
                <label>Lien</label>
            </value>
            <value>
                <fullName>Credit Score</fullName>
            </value>
            <value>
                <fullName>Personnel Issue</fullName>
            </value>
            <value>
                <fullName>Legal Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>