force-app/main/default/objects/Application__c/fields/Related_Job__c.field-meta.xml
<CustomField>
    <fullName>Related_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Job</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>