force-app/main/default/objects/Application__c/fields/State_3__c.field-meta.xml
<CustomField>
    <fullName>State_3__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>