force-app/main/default/objects/Application__c/fields/TAX_ID_Number_Verified__c.field-meta.xml
<CustomField>
    <fullName>TAX_ID_Number_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TAX ID Number Verified</label>
    <type>Checkbox</type>
</CustomField>