force-app/main/default/objects/Application__c/fields/Terms_and_Conditions_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms and Conditions Accepted</label>
    <type>Checkbox</type>
</CustomField>