force-app/main/default/objects/Application__c/fields/Type_of_License__c.field-meta.xml
<CustomField>
    <fullName>Type_of_License__c</fullName>
    <label>Type of License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>