force-app/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Full_Legal_Business_Name__c</columns>
    <columns>Company_Billing_Address__c</columns>
    <columns>Company_Billing_Address_2__c</columns>
    <columns>City__c</columns>
    <columns>Company_Billing_Zip_Code__c</columns>
    <columns>State__c</columns>
    <columns>Company_Billing_Country__c</columns>
    <columns>Applicant_Mobile__c</columns>
    <columns>Applicant_Phone__c</columns>
    <columns>Applicant_Fax__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>