force-app/main/default/objects/Application__c/listViews/My_Application.listView-meta.xml
<ListView>
    <fullName>My_Application</fullName>
    <columns>NAME</columns>
    <columns>Company_Full_Legal_Business_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Application</label>
</ListView>